// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab can apply custom styling 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "hsl(210, 5%, 87%)",
          "borderBottomWidth": 2,
          "borderRadius": 0,
          "borderWidth": 0,
          "flexBasis": 0,
          "flexGrow": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        Object {
          "backgroundColor": "lavender",
          "borderTopColor": "rebeccapurple",
        },
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
          "fontSize": 16,
          "fontWeight": "700",
          "textAlign": "center",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
          null,
        ],
      ]
    }
  >
    Styled Tab
  </Text>
</View>
`;

exports[`Tab renders as expected when Tab is selected 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "hsl(0, 0%, 100%)",
          "borderBottomColor": "hsl(190, 95%, 30%)",
          "borderBottomWidth": 2,
          "borderRadius": 0,
          "borderWidth": 0,
          "color": "hsl(190, 95%, 30%)",
          "flexBasis": 0,
          "flexGrow": 1,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
          "fontSize": 16,
          "fontWeight": "700",
          "textAlign": "center",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
          Object {
            "backgroundColor": "hsl(0, 0%, 100%)",
            "borderBottomColor": "hsl(190, 95%, 30%)",
            "color": "hsl(190, 95%, 30%)",
          },
        ],
      ]
    }
  >
    Selected Tab
  </Text>
</View>
`;

exports[`Tab renders as expected with a component passed as children 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "hsl(210, 5%, 87%)",
          "borderBottomWidth": 2,
          "borderRadius": 0,
          "borderWidth": 0,
          "flexBasis": 0,
          "flexGrow": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        undefined,
      ],
    ]
  }
>
  <Text>
    Text component
  </Text>
</View>
`;

exports[`Tab renders default Tab as expected 1`] = `
<View
  accessibilityRole="tab"
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderColor": "hsl(210, 10%, 58%)",
        "borderRadius": 4,
        "borderWidth": 1,
        "justifyContent": "center",
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderBottomColor": "hsl(210, 5%, 87%)",
          "borderBottomWidth": 2,
          "borderRadius": 0,
          "borderWidth": 0,
          "flexBasis": 0,
          "flexGrow": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
        undefined,
      ],
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "hsl(210, 50%, 10%)",
          "fontSize": 16,
          "fontWeight": "700",
          "textAlign": "center",
        },
        Array [
          Object {
            "color": "hsl(210, 25%, 25%)",
            "fontSize": 16,
            "fontWeight": "700",
          },
          undefined,
          null,
        ],
      ]
    }
  >
    Default Tab
  </Text>
</View>
`;
